bug flickering

--- a/style.css
+++ b/style.css
@@ -27,17 +27,22 @@ body.menu-open {
 }
 
 .background-layer {
-  position: fixed;
-  top: 0px;
+  position: absolute;
+  top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
+  width: 100%;
+  height: 100%;
   background-image: url("images/sunset_tablet.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  pointer-events: none;
+  z-index: -1; /* place it behind everything */
+}
+
+.background-wrapper {
+  position: relative;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .main-background {
@@ -78,10 +83,10 @@ header {
 .header-controls img {
   width: 30px;
   height: 20px;
-  margin-right: 30px;
+  margin-right: 40px;
   cursor: pointer;
   border: 1px solid #ccc;        
-  box-shadow: 0 0 3px rgba(0,0,0,0.2);
+  box-shadow: 0 0px 3px rgba(0,0,0,0.2);
   border-radius: 3px;               
   background-color: white;        
 }
@@ -89,7 +94,7 @@ header {
 .language-menu {
   position: absolute;
   top: 60px;
-  right: 10px;
+  margin-right: 38px;
   background: white;
   flex-direction: column;
   border: 1px solid #ccc;
